# mantid-profiler

./: .gitignore  .pre-commit-config.yaml  README.md  diskrecord.py  environment.yml  mantid-profiler.py  psrecord.py  pyproject.toml  time_util.py
.github/workflows/: package.yml
conda.recipe/: meta.yaml  recipe.yaml
src/mantidprofiler/: __init__.py  __main__.py  algorithm_tree.py  children_util.py  diskrecord.py  mantidprofiler.py  psrecord.py
