[project]
name = "mantidprofiler"
description = "Uses psrecord and plotly.js to profile a mantid workflow"
version = "1.1"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

[project.urls]
homepage = "https://github.com/mantidproject/mantid-profiler/"
repository = "https://github.com/mantidproject/mantid-profiler/"
issues = "https://github.com/mantidproject/mantid-profiler/issues"

[project.scripts]
mantidprofiler = "mantidprofiler.mantidprofiler:main"

[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yml","*.yaml","*.ini"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
select = ["A", "ARG", "BLE", "E", "F", "I", "PT"]

[tool.pixi.workspace]
channels = ["conda-forge", "mantid"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mantidprofiler = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
mantid = ">=6.10"
psutil = ">=5.8.0" # mantidworkbench requires this, but mantid does not
argcomplete = ">=3.6.3,<4"

[tool.pixi.feature.package.dependencies]
anaconda-client = "*"
check-wheel-contents = "*"
python-build = "*"
rattler-build = "*"
setuptools = "*"

[tool.pixi.feature.developer.dependencies]
libarchive = "*"
pre-commit = "*"
toml = "*"
wheel = "*"

[tool.pixi.environments]
default = { features = ["developer", "package"], solve-group="default" }
